--- a/src/main/webapp/form_ex_warehouse.html
+++ b/src/main/webapp/form_ex_warehouse.html
@@ -96,7 +96,7 @@
                                                 <div class="form-group">
                                                     <label class="col-sm-2 control-label">备注</label>
                                                     <div class="col-sm-10">
-                                                        <textarea class="form-control input-lg m-b" name="saysths" rows="5" cols="30" wrap="soft" style="resize:none;">备注</textarea>
+                                                        <textarea  id="text-wh" class="form-control input-lg m-b" name="saysths" rows="5" cols="30" wrap="soft" style="resize:none;">备注</textarea>
                                                     </div>
                                                 </div>
                                                 <div class="form-group">
@@ -124,7 +124,7 @@
                                                 </div>
                                                 <div class="form-group">
                                                     <div class="col-sm-4 col-sm-offset-2">
-                                                        <button class="btn btn-primary" type="submit" onclick="borrow_submit()">出库</button>
+                                                        <button class="btn btn-primary" type="submit" onclick="ex_submit()">出库</button>
                                                     </div>
                                                 </div>
                                             </form>
@@ -196,67 +196,155 @@
     });
 </script>
 <script>
-    const dataSet = [
-        ['id', 'aaa', 'bb', '30', 'xxxx-xx', 'aaa', 'bb',  'xxxx-xx','1'],
-        ['id1', 'aaa1', 'cc', '20', 'xxxx-xx', 'aaa', 'bb',  'xxxx-xx','2'],
-        ['id2', 'aaa', 'bb', '30', 'xxxx-xx', 'aaa', 'bb',  'xxxx-xx','3'],
-        ['id3', 'aaa1', 'cc', '20', 'xxxx-xx', 'aaa', 'bb',  'xxxx-xx','0'],
-        ['id4', 'aaa', 'bb', '30', 'xxxx-xx', 'aaa', 'bb',  'xxxx-xx','1'],
-        ['id5', 'aaa1', 'cc', '20', 'xxxx-xx', 'aaa', 'bb',  'xxxx-xx','2'],
-        ['id6', 'aaa', 'bb', '30', 'xxxx-xx', 'aaa', 'bb',  'xxxx-xx','3'],
-        ['id7', 'aaa1', 'cc', '20', 'xxxx-xx','aaa', 'bb',  'xxxx-xx', '0'],
-        ['id8', 'aaa', 'bb', '30', 'xxxx-xx', 'aaa', 'bb', 'xxxx-xx','3'],
-        ['id9', 'aaa1', 'cc', '20', 'xxxx-xx', 'aaa', 'bb',  'xxxx-xx','2'],
-    ];
-    const dataSets = [
-        ['aaa', '规格', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
-        ['aaa1', '规格1', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
-        ['aaa2', '规格', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
-        ['aaa3', '规格1', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
-        ['aaa4', '规格', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
-        ['aaa5', '规格1', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
-        ['aaa6', '规格', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
-        ['aaa7', '规格1', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
-        ['aaa8', '规格', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
-        ['aaa9', '规格1', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
-        ['aaa10', '规格', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
-        ['aaa11', '规格1', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
-        ['aaa12', '规格', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
-        ['aaa13', '规格1', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
-        ['aaa14', '规格', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
-        ['aaa15', '规格1', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu'],
-    ];
+    var temp_user_id;
+    var temp_data;
+    var borrow_order_id;
+
+    console.log("--flag-1-");
+
+    $.ajax({
+        async: false,
+        type : "post",
+        url : "user/findOne",
+        success : function(user) {
+            console.log("--flag-findOne-");
+            temp_user_id = user.user_id;
+            console.log("user.user_id"+user.user_id);
+        }
+    });
+
+    // 初始化，获取首页表格数据
+    $.ajax({
+        async: false,
+        data: {user_id: temp_user_id},
+        type : "post",
+        url : "ex/initBorrowTable",
+        success : function(data) {
+            console.log("--flag-inittable-");
+            temp_data=data.data;
+        }
+    });
+    console.log("|temp_data=\n"+temp_data);
+
+    function json2Array(jsonData, list_or_not) {
+        var jsonsString = jsonData.slice(1, jsonData.length - 1);
+        var jsonStrings = jsonsString.split("},");
+        var length = jsonStrings.length;
+        var jsons = [];
+        for (var i = 0; i !== length-1; ++i) {
+            jsonStrings[i] += '}';
+        }
+        var source = [[]];
+        for (var i = 0; i !== length; ++i) {
+            //console.log("$"+jsonStrings[i]);
+            jsons[i] = eval('(' + jsonStrings[i] + ')');
+            var data = [];
+            for(var key in jsons[i]) {
+                if(i === 0) {
+                    source[0].push(key);
+                }
+                //console.log("i="+i+"|key="+key+"|json[i,key]="+jsons[i][key]);
+                if(!list_or_not || key !== "purpose"  ) {
+                    if (key !== "type") {
+                        data.push(jsons[i][key]);
+                    }
+                } else {
+                    console.log("跳过在执行一次")
+                }
+            }
+            source.push(data);
+        }
+        return source.slice(1); //删除第1行
+    }
+    //console.log("temp_data=\n"+temp_data);
+    temp_data = json2Array(temp_data, true);
+
+    // 时间格式纠正
+    function formatDate(ms, format = 'YYYY-MM-DD hh:mm:ss') {
+        const date = new Date(ms);
+        const year = date.getFullYear();
+        const month = date.getMonth() + 1;
+        const day = date.getDate();
+        const hours = date.getHours();
+        const minutes = date.getMinutes();
+        const seconds = date.getSeconds();
+
+        const map = {
+            'YYYY': year,
+            'MM': addPrefixZero(month),
+            'M': month,
+            'DD': addPrefixZero(day),
+            'D': day,
+            'hh': addPrefixZero(hours),
+            'h': hours,
+            'mm': addPrefixZero(minutes),
+            'm': minutes,
+            'ss': addPrefixZero(seconds),
+            's': seconds,
+        };
+
+        let result = format;
+        for (const key in map) {
+            result = result.replace(key, map[key]);
+        }
+        return result;
+    }
+
+    // 在个位数字前面添加 0，使得数字位数为两位
+    function addPrefixZero(num) {
+        return num < 10 ? '0' + num : num;
+    }
+
+    var start_dateTime;
+    var end_dateTime;
+    var requisition_dateTime;
+    // console.log('date:'+formatDate(1684570394000));
+    for (var i = 0; i !== temp_data.length; ++i) {
+        console.log("#"+i+"#"+temp_data[i][3]);
+        start_dateTime = formatDate(Number(eval(temp_data[i][3])));
+        end_dateTime = formatDate(Number(eval(temp_data[i][4])));
+        // console.log("转数字"+Number(temp_data[i][3]));
+        temp_data[i][3] = start_dateTime;
+        temp_data[i][4] = end_dateTime;
+    }
+    // console.log("@@@"+requisition_dateTime);
+
+    console.log("|temp_data_CHANGED=\n"+temp_data);
+
+
+    const dataSets = [ ];
     $(document).ready(function() {
         $(function(){
             var table = $('#table').DataTable({
                 retrieve: true,
-                data:dataSet,
+                data:temp_data,
                 columns:[
                     {
                         'field': "purchase_requisition_id",
                         'title': '领用/借用申请表编号',
-                        'defaultContent' : ""
+                        'defaultContent' : "",
+                        'sClass': 'text-center'
                     }, {
                         'field': "purchase_order_id",
                         'title': '领用/借用物品清单编号',
-                        'defaultContent' : ""
+                        'defaultContent' : "",
+                        'sClass': 'text-center'
                     }, {
                         'field': "requisition_user_id",
                         'title': '申请人',
-                        'defaultContent' : ""
+                        'defaultContent' : "",
+                        'sClass': 'text-center'
                     },  {
                         'field': "requisition_date",
                         'title': '借用开始日期',
-                        'defaultContent' : ""
+                        'defaultContent' : "",
+                        'sClass': 'text-center'
                     },{
                         'field': "requisition_date",
                         'title': '借用结束日期',
-                        'defaultContent' : ""
+                        'defaultContent' : "",
+                        'sClass': 'text-center'
                     }, {
-                        'field': "state",
-                        'title': '申请当前状态',
-                        'defaultContent' : "0"
-                    },  {
                         field: "operate",
                         sTitle: '操作',
                         sDefaultContent :
@@ -295,6 +383,40 @@
                     }
                 }
             });
+
+            var temp_list_data;
+            var temp_order_id;  // 本条订单的order——id
+
+            // 点击 物品清单
+            $("table tbody").on("click",".list-btn",function (){
+                // TODO: 待办 - 进入物品清单弹窗，刷新表单
+                //$('#listTable').dataTable().api().draw();
+
+                var tds=$(this).parents("tr").children();
+                temp_order_id = tds[1].innerText;
+                borrow_order_id = tds[1].innerText;
+                //console.log("temp_order_id"+temp_order_id);
+                $.ajax({
+                    async: true,  // true 同步，false异步
+                    data: {order_id: temp_order_id},
+                    type: "post",
+                    url : "ex/searchOneByOrderId",
+                    success : function(data) {
+                        //console.log("--flag-initListTable-");
+                        temp_list_data=data.data;
+                        temp_list_data = json2Array(temp_list_data, true)
+                    }
+                });
+
+                $('#updateModal').modal('show');  // 显示弹窗表格
+                // 更新表格数据
+                $('#listTable').dataTable().api().clear();
+                $('#listTable').dataTable().api().rows.add(temp_list_data);
+                $('#listTable').dataTable().api().draw();
+
+
+                $('#updateModal').modal('show');
+            })
 
             var listtable = $('#listTable').DataTable({
                 retrieve: true,
@@ -389,22 +511,29 @@
                 }
             });
 
-            //点击物品清单
-            $("table tbody").on("click",".list-btn",function (){
-
-                $('#updateModal').modal('show');
-            })
-
-
 
         });
 
     } );
 
     //点击出库按钮
-    function borrow_submit(){
+    function ex_submit(){
         if(confirm('确认出库？')){
             //点击确认
+            var notes = $('#text-wh').val();
+
+            var front_end_data =
+                'ex_order_id='+borrow_order_id+'&'+ 'notes='+notes;
+
+            // 把前端数据传给后端
+            $.post("ex/exWarehouse", front_end_data, function (data) {
+                console.log("在接受后端数据之后");
+                if (data.flag) {
+                    alert("提交成功");
+                } else {
+                    alert("提交失败");
+                }
+            })
 
         }else{
             //点击取消
